add 2 endpoints
